# rs-sql-indent

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  flake.nix  treefmt.nix
.github/workflows/: ci.yml  deploy.yml  main.yml
playground/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
playground/src/: App.tsx  index.css
src/: config.rs  formatter.rs  lexer.rs  lib.rs  main.rs  token.rs  wasm.rs
src/formatter/: aligned.rs  basic.rs  dataops.rs  mod.rs  streamline.rs
tests/: cli.rs
tests/fixtures/: aligned__basic_select.expected  aligned__complex_join.expected  aligned__complex_join.sql  aligned__dml.expected  basic__basic_select.expected  basic__basic_select.sql  basic__complex_join.expected  basic__cte_subquery.expected  basic__cte_subquery.sql  basic__ddl.expected  basic__dml.expected  basic__golden_full_query.expected  basic__golden_full_query.sql  basic__window_union.expected  dataops__basic_select.expected  dataops__complex_join.expected  dataops__cte_subquery.expected  dataops__ddl.expected  dataops__dml.expected  dataops__dml.sql  dataops__golden_full_query.expected  dataops__window_union.expected  river__cte_subquery.expected  river__ddl.expected  river__golden_full_query.expected  river__window_union.expected  standard__basic_select.expected  standard__complex_join.expected  standard__cte_subquery.expected  standard__ddl.expected  standard__ddl.sql  standard__dml.expected  standard__golden_full_query.expected  standard__window_union.expected  standard__window_union.sql  streamline__ddl.expected  (+6 more)
(+9 files in other folders)
