[package]
name = "rs-sql-indent"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A CLI tool that formats SQL from stdin"
repository = "https://github.com/takeokunn/rs-sql-indent"
rust-version = "1.85"

[dependencies]
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
